force-app/main/default/objects/Document_Store__c/Document_Store__c.object-meta.xml
<CustomObject>
    <label>Document Store</label>
    <nameField>
        <displayFormat>DS-{0000}</displayFormat>
        <label>Document Store Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Stores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>