force-app/main/default/objects/Document_Store__c/fields/FooterHTML__c.field-meta.xml
<CustomField>
    <fullName>FooterHTML__c</fullName>
    <label>FooterHTML</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>