force-app/main/default/objects/Document_Store__c/fields/HTML_Data__c.field-meta.xml
<CustomField>
    <fullName>HTML_Data__c</fullName>
    <label>HTML Data</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>