force-app/main/default/objects/Document_Store__c/fields/Mached_Data__c.field-meta.xml
<CustomField>
    <fullName>Mached_Data__c</fullName>
    <label>Mached Data</label>
    <length>50</length>
    <type>Text</type>
</CustomField>